rag-chatapp-retail/aks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-chatapp-retail
spec:
  selector:
    app: rag-chatapp-retail
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
